Fix not showing dropdownds

--- a/style.css
+++ b/style.css
@@ -17,17 +17,19 @@ a.nav {
 }
 
 .dropdown {
-    display: inline-block;
+    /*display: inline-block;*/
     position: relative;
 }
 
 .dropdown-content {
     display: none;
     position: absolute;
+    background-color: green;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
-    padding: 5px;
 }
 
-.dropdown:hover .dropdown-content:hover {
+.dropdown:hover .dropdown-content {
     display: block;
 }
